Dict of tags and latest changes

--- a/personal_page/index.html
+++ b/personal_page/index.html
@@ -44,7 +44,7 @@ applied to coral reefs, big data in science, and MLops.</p>
     </aside>
     <main>
         <section id="education">
-            <h3>EDUCATION</h2>
+            <h3>EDUCATION</h3>
             <div>
                 <span class="title">UNIVERSIDADE FEDERAL DE SANTA CATARINA, Florianópolis</span> -
                 <span class="subtitle">Bachelor of Oceanography</span><br />
@@ -57,28 +57,117 @@ applied to coral reefs, big data in science, and MLops.</p>
             </div>
         </section>
         <section id="experience">
-            <h3>EXPERIENCE</h2>
+            <h3>EXPERIENCE</h3>
             <div>
-                <span class="title">Growth.Software, Florianópolis (Brazil)</span> - <span class="subtitle">Data Scientist and Data
-                Engineer</span><br />
+                <span class="title">Growth.Software, Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Data Scientist and Data Engineer</span><br />
                 <span class="date">JANUARY 2021 - PRESENT</span>
                 <ul>
                     <li>Dashboards creation, APIs for data retrieval, data integration</li>
                     <li>DevOps (AWS cloud) and Machine Learning Products R&D</li>
                 </ul>
             </div>
+
             <div>
-                <span class="title">GrowthHackers, Florianópolis (Brazil)</span> - <span class="subtitle">Data Scientist and Data
-                Engineer</span><br />
+                <span class="title">GrowthHackers, Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Data Scientist and Data Engineer</span><br />
                 <span class="date">JANUARY 2019 - DECEMBER 2020</span>
                 <ul>
                     <li>Dashboards creation, APIs for data retrieval, data integration</li>
                     <li>DevOps (AWS cloud) and Growth Hacking programming</li>
                 </ul>
             </div>
+
+            <div>
+                <span class="title">Contentools, Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Growth Hacker Programmer and Data Scientist</span><br />
+                <span class="date">MARCH 2016 - DECEMBER 2019</span>
+                <ul>
+                    <li>ML R&D, DevOps, and Dashboards.</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">Projeto MAArE - UFSC, Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Information Technology Consultant</span><br />
+                <span class="date">MARCH 2016 - MAY 2017</span>
+                <ul>
+                    <li>Requirements gathering and analysis, code progress supervision, and
+                        quality assurance.</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">LABAR - UFSC, Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Student Volunteer</span><br />
+                <span class="date">JUNE 2011 - APRIL 2017</span>
+                <ul>
+                    <li>Analysis of coral/algae cover using images taken in surveys</li>
+                    <li>Statistical analysis of data (MANOVA, SIMPER, clustering, PCoAs, etc)
+                        using both proprietary software and R</li>
+                    <li>Data tidying and treatment using regex, R, and/or other tools</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">CSIRO - Brisbane (Australia)</span> - 
+                <span class="subtitle">Student Volunteer</span><br />
+                <span class="date">SEPTEMBER 2015 - FEBRUARY 2017</span>
+                <ul>
+                    <li>For my Study Abroad program, I had the opportunity to work with a
+                        professor to develop a database to help map coral reefs in Fiji (later
+                        this project became my BSc thesis).</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">iBridge - Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Web Developer</span><br />
+                <span class="date">NOVEMBER 2013 - JANUARY 2015</span>
+                <ul>
+                    <li>PHP and MySQL programming.</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">Whapp - Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Co-founder and Web Developer</span><br />
+                <span class="date">OCTOBER 2011 - OCTOBER 2013</span>
+                <ul>
+                    <li>Development of web systems.</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">Plugue.me - Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Co-founder and Web Developer</span><br />
+                <span class="date">SEPTEMBER 2010 - JUNE 2011</span>
+                <ul>
+                    <li>Development of websites, and social marketing.</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">Criamidia - Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Web Developer</span><br />
+                <span class="date">JANUARY 2004 - JULY 2009</span>
+                <ul>
+                    <li>Development of websites.</li>
+                </ul>
+            </div>
+
+            <div>
+                <span class="title">Matrix Data Center - Florianópolis (Brazil)</span> - 
+                <span class="subtitle">Web Developer</span><br />
+                <span class="date">FEBRUARY 2004 - AUGUST 2004</span>
+                <ul>
+                    <li>News portal maintenance.</li>
+                </ul>
+            </div>
+
         </section>
         <section id="publications">
-            <h3>PUBLICATIONS IN PEER-REVIEWED JOURNALS</h2>
+            <h3>PUBLICATIONS IN PEER-REVIEWED JOURNALS</h3>
             <div>
                 <div>
                     <span class="title">A tool for a race against time: Dispersal simulations to support
@@ -130,19 +219,32 @@ programming language, formal analysis, and methodology.
         <section id="certifications">
             <h3>CERTIFICATIONS</h2>
             <div>
-                <span class="title">Executive Data Science</span><br />
+                <span class="title">Executive Data Science (Specialization)</span><br />
                 <span class="subtitle">Johns Hopkins University</span><br />
                 <span class="date">MAY 29th, 2023</span><br />
                 <span class="description"><a href="https://coursera.org/verify/specialization/7SQVBKPMV7AG">Click here to view certificate</a></span>
-Johns Hopkins University
-MAY 29th, 2023
+            </div>
+
+            <div>
+                <span class="title">TensorFlow on Google Cloud</span><br />
+                <span class="subtitle">Google Cloud</span><br />
+                <span class="date">AUGUST 03rd, 2023</span><br />
+                <span class="description"><a href="https://coursera.org/verify/N5YCW75UUSRT">Click here to view certificate</a></span>
+            </div>
+
+            <div>
+                <span class="title">Google Cloud Big Data and Machine Learning Fundamentals</span><br />
+                <span class="subtitle">Google Cloud</span><br />
+                <span class="date">MAY 08th, 2023</span><br />
+                <span class="description"><a href="https://coursera.org/verify/NWNWXQV9Q76G">Click here to view certificate</a></span>
+            </div>
 
         </section>
     </main>
     
 
     <footer>
-        <address>Florianópolis, SC  Brazil - 2023</address>
+        <address>Balneário Camboriú, SC  Brazil - 2023</address>
     </footer>
   </body>
 </html>
