Add media queries

--- a/personal_page/index.html
+++ b/personal_page/index.html
@@ -43,6 +43,7 @@ applied to coral reefs, big data in science, and MLops.</p>
         </p>
     </aside>
     <main>
+        <hr class="media-divider">
         <section id="education">
             <h3>EDUCATION</h3>
             <div>
@@ -240,6 +241,7 @@ programming language, formal analysis, and methodology.
             </div>
 
         </section>
+        <hr class="media-divider">
     </main>
     
 
